main: Added dbutils + mongo + postgres connectors.

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -12,3 +12,14 @@ Host1=localhost
 Host2=localhost
 Port1=9092
 Port2=9093
+
+[mongo]
+Enabled=true
+MasterNode=localhost
+ReaderNode=localhost
+Port=27017
+
+[source-postgres]
+Enabled=true
+ReaderNode=localhost
+Port=6432
