main: Added poller logic and code.

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -23,3 +23,7 @@ Port=27017
 Enabled=true
 ReaderNode=localhost
 Port=6432
+Username=masteruser
+Password=JtIFpXIj4HsqLip
+Database=proddb
+SslEnabled=disable
